src/quick/qtquickglobal_p.h
@@ -54,6 +54,7 @@
 QT_BEGIN_NAMESPACE
 
 void QQuick_initializeProviders();
+void QQuick_deinitializeProviders();
 
 Q_DECLARE_LOGGING_CATEGORY(DBG_TOUCH)
 Q_DECLARE_LOGGING_CATEGORY(DBG_MOUSE)
